--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,37 +8,38 @@ plugins {
         id 'dagger.hilt.android.plugin'
         id 'androidx.room'
         id 'org.jetbrains.kotlin.plugin.serialization'
-        // enable if needed
-        // id 'dev.reformator.stacktracedecoroutinator'
 }
 
 android {
         compileSdk = 35
-        buildToolsVersion = '34.0.0'
-        namespace = 'org.koitharu.kotatsu'
+        namespace = 'app.yomi.android'
 
         defaultConfig {
-                applicationId 'org.koitharu.kotatsu'
+                applicationId 'app.yomi.android'
                 minSdk = 23
                 targetSdk = 35
                 versionCode = 1033
                 versionName = '9.4.1'
                 generatedDensities = []
                 testInstrumentationRunner 'org.koitharu.kotatsu.HiltTestRunner'
+
                 ksp {
                         arg('room.generateKotlin', 'true')
                 }
+
                 androidResources {
-                        // https://issuetracker.google.com/issues/408030127
                         generateLocaleConfig false
                 }
+
                 def localProperties = new Properties()
                 def localPropertiesFile = rootProject.file('local.properties')
                 if (localPropertiesFile.exists()) {
                         localProperties.load(new FileInputStream(localPropertiesFile))
                 }
-                resValue 'string', 'tg_backup_bot_token', localProperties.getProperty('tg_backup_bot_token', '')
+                resValue 'string', 'tg_backup_bot_token',
+                        localProperties.getProperty('tg_backup_bot_token', '')
         }
+
         buildTypes {
                 debug {
                         applicationIdSuffix = '.debug'
@@ -46,17 +47,21 @@ android {
                 release {
                         minifyEnabled true
                         shrinkResources true
-                        proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+                        proguardFiles getDefaultProguardFile(
+                                'proguard-android-optimize.txt'
+                        ), 'proguard-rules.pro'
                 }
                 nightly {
                         initWith release
                         applicationIdSuffix = '.nightly'
                 }
         }
+
         buildFeatures {
                 viewBinding true
                 buildConfig true
         }
+
         packagingOptions {
                 resources {
                         excludes += [
@@ -65,15 +70,18 @@ android {
                         ]
                 }
         }
+
         sourceSets {
-                androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
+                androidTest.assets.srcDirs += files("$projectDir/schemas")
                 main.java.srcDirs += 'src/main/kotlin/'
         }
+
         compileOptions {
                 coreLibraryDesugaringEnabled true
                 sourceCompatibility JavaVersion.VERSION_11
                 targetCompatibility JavaVersion.VERSION_11
         }
+
         kotlinOptions {
                 jvmTarget = JavaVersion.VERSION_11.toString()
                 freeCompilerArgs += [
@@ -91,38 +99,48 @@ android {
                         '-Xtype-enhancement-improvements-strict-mode'
                 ]
         }
+
         room {
                 schemaDirectory "$projectDir/schemas"
         }
+
         lint {
                 abortOnError true
-                disable 'MissingTranslation', 'PrivateResource', 'SetJavaScriptEnabled', 'SimpleDateFormat'
+                disable 'MissingTranslation',
+                        'PrivateResource',
+                        'SetJavaScriptEnabled',
+                        'SimpleDateFormat'
         }
+
         testOptions {
                 unitTests.includeAndroidResources true
                 unitTests.returnDefaultValues false
                 kotlinOptions {
-                        freeCompilerArgs += ['-opt-in=org.koitharu.kotatsu.parsers.InternalParsersApi']
+                        freeCompilerArgs += [
+                                '-opt-in=org.koitharu.kotatsu.parsers.InternalParsersApi'
+                        ]
                 }
         }
+
         applicationVariants.configureEach { variant ->
                 if (variant.name == 'nightly') {
                         variant.outputs.each { output ->
                                 def now = LocalDateTime.now()
-                                output.versionCodeOverride = now.format("yyMMdd").toInteger()
-                                output.versionNameOverride = 'N' + now.format("yyyyMMdd")
+                                output.versionCodeOverride =
+                                        now.format("yyMMdd").toInteger()
+                                output.versionNameOverride =
+                                        'N' + now.format("yyyyMMdd")
                         }
                 }
         }
 }
+
 dependencies {
         def parsersVersion = libs.versions.parsers.get()
         if (System.properties.containsKey('parsersVersionOverride')) {
-                // usage:
-                // -DparsersVersionOverride=$(curl -s https://api.github.com/repos/kotatsuapp/kotatsu-parsers/commits/master -H "Accept: application/vnd.github.sha" | cut -c -10)
                 parsersVersion = System.getProperty('parsersVersionOverride')
         }
-        //noinspection UseTomlInstead
+
         implementation("com.github.YomiApp:kotatsu-parsers:$parsersVersion") {
                 exclude group: 'org.json', module: 'json'
         }
@@ -154,9 +172,7 @@ dependencies {
 
         implementation libs.androidx.work.runtime
         implementation libs.guava
-
-    // Foldable/Window layout
-    implementation libs.androidx.window
+        implementation libs.androidx.window
 
         implementation libs.androidx.room.runtime
         implementation libs.androidx.room.ktx
@@ -203,12 +219,9 @@ dependencies {
         androidTestImplementation libs.androidx.rules
         androidTestImplementation libs.androidx.test.core
         androidTestImplementation libs.androidx.junit
-
         androidTestImplementation libs.kotlinx.coroutines.test
-
         androidTestImplementation libs.androidx.room.testing
         androidTestImplementation libs.moshi.kotlin
-
         androidTestImplementation libs.hilt.android.testing
         kspAndroidTest libs.hilt.android.compiler
 }
